[package]
name = "portfolio"
version = "0.1.0"
authors = ["Toshiki Goto <gotoshi.euphonium@gmail.com>"]
description = "portfolio's wasm package"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.x"
regex = "1.x"